2012-10-15 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* device/include/mcs51/lint.h:
	  Fixed bug #3577318.

2012-10-13 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/as6808/m08mch.c,
	* sdas/as6808/m08pst.c,
	* sdas/as6808/m6808.h,
	* sdas/as6808/Makefile.in,
	* sdas/as8051/i51mch.c,
	* sdas/as8051/i51pst.c,
	* sdas/as8051/Makefile.in,
	* sdas/asgb/gb.h,
	* sdas/asgb/gbadr.c,
	* sdas/asgb/gbmch.c,
	* sdas/asgb/Makefile.in,
	* sdas/asrab/Makefile.in,
	* sdas/asrab/rab.h,
	* sdas/asrab/rabadr.c,
	* sdas/asrab/rabmch.c,
	* sdas/asrab/rabpst.c,
	* sdas/asxxsrc/asdata.c,
	* sdas/asxxsrc/asexpr.c,
	* sdas/asxxsrc/aslex.c,
	* sdas/asxxsrc/aslist.c,
	* sdas/asxxsrc/asmain.c,
	* sdas/asxxsrc/asxxxx.h,
	* sdas/asz80/Makefile.in,
	* sdas/asz80/z80.h,
	* sdas/asz80/z80adr.c,
	* sdas/asz80/z80mch.c,
	* sdas/asz80/z80pst.c: added ASxxxx v5 macro support

2012-10-13 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCtree_dec.hpp,
	  src/SDCCralloc.hpp:
	  Fixed bug #3566360.

2012-10-08 Borut Razem <borut.razem AT gmail.com>

	* support/sdbinutils/include/opcode/ia64.h: added since build
	  on IA64 fails with elf64-ia64.c:27:25: error: opcode/ia64.h:
	  No such file or directory

2012-10-08 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/mcs51/gen.c (genPagedPointerGet): fixed bug #3527222
	* support/regression/tests/gcc-torture-execute-921013-1.c: reenabled
	* src/mcs51/gen.c (genCast),
	* src/ds390/gen.c (genCast): fixed bug3467508 regression test failures
	* support/regression/tests/bug3467508.c: reenabled for mcs51 and ds390

2012-10-08 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/asgb/asgb.vcxproj,
	* sdas/asgb/asgb.vcxproj.filters,
	* sdas/asgb/Makefile.in,
	* sdas/asgb/gbext.c: removed gbext.c
	* sdas/as8051/i51mch.c,
	* sdas/as8051/i8051.h,
	* sdas/asgb/gbadr.c,
	* sdas/asgb/gbmch.c,
	* sdas/asrab/rabadr.c,
	* sdas/asz80/z80adr.c,
	* sdas/asxxsrc/asdata.c,
	* sdas/asxxsrc/aslist.c,
	* sdas/asxxsrc/asout.c,